--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -15,6 +15,11 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif !important;
+}
+
+body * {
+    font-family: 'Roboto', sans-serif !important;
 }
 
 html {
