--- a/src/components/CardOrder/CardOrder.module.scss
+++ b/src/components/CardOrder/CardOrder.module.scss
@@ -1,4 +1,6 @@
 .status-order {
+    background-color: #e9e9e9;
+    padding-left: 10px;
     span {
         color: red;
     }
@@ -8,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 10px;
 
     article {
         position: relative;
