--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,12 +1,9 @@
-.header {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03), 0 1px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px 0 rgba(0, 0, 0, 0.02);
-}
-
 .wrapper {
     width: var(--width-page);
     padding: 10px 0px;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: #006b47;
+    color: white;
 }
 
 .row-wrapper {
@@ -15,6 +12,7 @@
 
 .logo {
     height: 80px;
+    width: auto;
     &:hover {
         cursor: pointer;
     }
@@ -79,7 +77,7 @@
 }
 
 .text-header {
-    color: rgb(128, 128, 137);
+    color: var(--text-item-header);
     font-weight: 500;
 }
 
