--- a/src/pages/CartPage/CartPage.module.scss
+++ b/src/pages/CartPage/CartPage.module.scss
@@ -1,14 +1,15 @@
 .wrapper {
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
 }
 
 .title {
     margin-bottom: 12px;
+    margin-left: 30px;
 
     span {
-        font-size: 1.6rem;
+        font-size: 2rem;
         cursor: pointer;
     }
 }
