--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,12 +1,14 @@
 .wrapper {
-    padding: 30px 0px;
     position: relative;
+    margin: 0 10%;
+    padding-bottom: 30px;
+    background-color: white;
 }
 
 .list-product {
-    margin-top: 20px;
+    margin: 20px 10px 0px 10px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
 }
 
@@ -14,5 +16,5 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 20px;
 }
