--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -4,16 +4,18 @@
 
 .wrapper-header {
     border-bottom: 0.0625rem solid #efefef;
-    padding: 1.125rem 0;
+    padding-top: 25px;
+    padding-bottom: 1.125rem;
     color: #555;
 }
 
 .wrapper-content {
     display: flex;
-    padding-top: 24px;
 
     & > div:first-child {
         flex: 1 !important;
+        padding: 25px 0px;
+        background-color: #e9e9e9;
     }
 }
 
@@ -38,7 +40,7 @@
     align-items: center;
     width: 281px;
     border-left: 0.0625rem solid #efefef;
-    padding-top: 20px;
+    padding-top: 60px;
 }
 
 .description-avt {
