--- a/src/pages/SignInPage/SignInPage.module.scss
+++ b/src/pages/SignInPage/SignInPage.module.scss
@@ -20,6 +20,7 @@
     gap: 8px;
     font-size: 3rem;
     margin-bottom: 40px;
+    margin-left: 80px;
 }
 
 .form {
@@ -62,7 +63,6 @@
 }
 
 .input-field {
-    width: 100%;
     margin-top: 4px;
     padding: 8px;
     border-radius: 16px;
