--- a/src/pages/SignUpPage/SignUpPage.module.scss
+++ b/src/pages/SignUpPage/SignUpPage.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    height: 100vh;
+    // height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,29 +7,26 @@
 
 .wrapper-content {
     display: flex;
-    transform: translateY(-40%);
 }
 
-.content {
-    flex: 1;
-    position: relative;
+.content-image {
+    margin-top: 170px;
+    margin-left: 80px;
 }
 
 .title {
+    margin-top: 20px;
     display: flex;
     align-items: center;
     gap: 8px;
     font-size: 3rem;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     width: 400px;
 }
 
@@ -40,7 +37,7 @@
 
 .form-link {
     font-weight: 500;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 
     a {
         color: #4646fd;
