--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,4 +1,5 @@
 .wrapper-content {
-    width: var(--width-page);
-    margin: 0 auto;
+    // width: var(--width-page);
+    // margin: 0 auto;
+    width: 100%;
 }
