--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     width: var(--width-page);
     padding: 10px 0px;
-    margin: 0 auto;
+    width: 100%;
     background-color: #006b47;
     color: white;
 }
