--- a/src/components/NavBar/NavBarItem/NavBarItem.module.scss
+++ b/src/components/NavBar/NavBarItem/NavBarItem.module.scss
@@ -7,6 +7,7 @@
 
 .text-option {
     color: rgb(56, 56, 61);
+    cursor: pointer;
     font-size: 16px;
     font-weight: 400;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03), 0 1px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px 0 rgba(0, 0, 0, 0.02);
