--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -32,7 +32,7 @@
 .slide-image-right2 {
     position: absolute;
     width: 32.5%;
-    top: 16.7%;
+    top: 125px;
     right: 0;
     z-index: 10;
 }
