--- a/src/pages/TypeProductPage/TypeProductPage.module.scss
+++ b/src/pages/TypeProductPage/TypeProductPage.module.scss
@@ -6,6 +6,6 @@
 
 .content {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
 }
