--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,8 +5,11 @@
 :root {
     --primary-color: #003d29;
     --primary-color-hover: #006b47;
+    --active-status: #aaea2b;
+    --background-color: #e9e9e9;
 
     --width-page: 1470px;
+    --height-header: 100px;
 
     --text-item-header: #ffffff;
 }
@@ -14,11 +17,11 @@
 body {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     font-family: 'Roboto', sans-serif !important;
 }
 
 body * {
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif !important;
 }
 
