--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,6 +1,18 @@
+.header {
+    height: 100px;
+}
+
 .wrapper {
     // width: var(--width-page);
     padding: 8px 0px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 11;
+
+    width: var(--width-page);
+    padding: 10px 0px;
     width: 100%;
     height: var(--height-header);
     background-color: #006b47;
