update/shop-page

--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -107,6 +107,9 @@
     margin: 0;
     padding: 10px 0;
     height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 8px;
 
     &:hover {
         cursor: pointer;
