update/style-layout

--- a/src/pages/OrderPage/OrderPage.module.scss
+++ b/src/pages/OrderPage/OrderPage.module.scss
@@ -13,3 +13,12 @@
         cursor: pointer;
     }
 }
+
+.empty-order {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.icon {
+    font-size: 5rem;
+}
