--- a/src/layouts/FullLayout/FullLayout.module.scss
+++ b/src/layouts/FullLayout/FullLayout.module.scss
@@ -1,4 +1,5 @@
 .wrapper-content {
+    height: calc(100vh - var(--height-header) - var(--height-footer));
     width: var(--width-page);
     margin: 0 auto;
     padding: 0 2%;
