update-layout-footer

--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -15,7 +15,7 @@
     & > div:first-child {
         flex: 1 !important;
         padding: 25px 0px;
-        background-color: #e9e9e9;
+        background-color: #ffffff;
     }
 }
 
@@ -41,6 +41,8 @@
     width: 281px;
     border-left: 0.0625rem solid #efefef;
     padding-top: 60px;
+    margin-left: 10px;
+    background-color: #ffffff;
 }
 
 .description-avt {
