--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -2,5 +2,5 @@
     // width: var(--width-page);
     // margin: 0 auto;
     width: 100%;
-    min-height: calc(100vh - var(--height-header) - var(--height-footer));
+    min-height: calc(100vh - var(--height-header));
 }
