--- a/src/layouts/components/Footer/Footer.module.scss
+++ b/src/layouts/components/Footer/Footer.module.scss
@@ -1,4 +1,43 @@
 .wrapper {
     height: var(--height-footer);
-    background-color: rgba($color: #000, $alpha: 0.5);
+    background-color: #e9e9e9;
+
+    p {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 25px;
+        color: rgba(0, 0, 0, 0.7);
+    }
+}
+.wapper-menu {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    gap: 30px;
+    padding: 40px 0px 30px 0px;
+
+    li {
+        list-style: none;
+        border-right: 1px solid rgba(0, 0, 0, 0.3);
+        padding-right: 30px;
+    }
+    li:last-child {
+        border-right: none !important;
+    }
+}
+
+.wapper-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.wapper-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 25px;
+    padding-bottom: 15px;
 }
