--- a/src/pages/CartPage/CartPage.module.scss
+++ b/src/pages/CartPage/CartPage.module.scss
@@ -1,16 +1,21 @@
 .wrapper {
-    margin-top: 20px;
+    margin-top: 30px;
     padding: 0 10%;
     display: flex;
     flex-direction: column;
 }
 
 .title {
-    margin-bottom: 12px;
+    margin-bottom: 30px;
     margin-left: 30px;
+    font-size: 20px;
 
     span {
-        font-size: 2rem;
         cursor: pointer;
+        font-size: 20px;
     }
+}
+
+.wrapper-content {
+    margin-bottom: 30px;
 }
