--- a/src/layouts/PersonalLayout/PersonalLayout.module.scss
+++ b/src/layouts/PersonalLayout/PersonalLayout.module.scss
@@ -1,7 +1,6 @@
 .wrapper-content {
     min-height: calc(100vh - var(--height-header));
-    width: var(--width-page);
-    margin: 0 auto;
+    width: 100%;
     padding: 0 2%;
     background-color: var(--background-color);
 }
