--- a/src/components/NavBar/NavBarItem/NavBarItem.module.scss
+++ b/src/components/NavBar/NavBarItem/NavBarItem.module.scss
@@ -6,20 +6,22 @@
 }
 
 .text-option {
+    display: inline-block;
+    margin-right: 4px;
+    margin-bottom: 8px;
+    width: fit-content;
+    border-radius: 10px;
     color: rgb(56, 56, 61);
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1.4rem;
     font-weight: 400;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03), 0 1px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px 0 rgba(0, 0, 0, 0.02);
-    margin-right: 50px;
-    padding: 5px 0px 5px 5px;
+    padding: 5px 5px 5px 5px;
     background-color: #f4f3f3;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+    width: 100%;
     margin-top: 15px;
     padding-left: 20px;
 }
