--- a/src/components/TopProduct/TopProduct.module.scss
+++ b/src/components/TopProduct/TopProduct.module.scss
@@ -1,7 +1,16 @@
+.title {
+    padding: 5px 10px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--primary-color-hover);
+    border-bottom: 1px solid var(--background-color);
+}
+
 .slider-wrapper {
     position: relative;
     padding: 0 10px;
-    height: 200px;
+    height: 260px;
 
     &:hover {
         cursor: pointer;
@@ -19,8 +28,8 @@
         left: 0;
         right: 0;
         margin: 0;
-        padding: 4px 0;
-        font-size: 1.2rem;
+        padding: 5px 0;
+        font-size: 1.3rem;
         color: #fff;
     }
 }
@@ -33,8 +42,8 @@
 
 .name-product {
     color: #555;
-    font-size: 1.4rem;
-    margin-top: 8px;
+    font-size: 1.6rem;
+    margin-top: 15px;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2; /* number of lines to show */
