--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -5,12 +5,32 @@
 
 .wrapper-content {
     margin: 0 10%;
+}
+
+.slide-product {
+    background-color: #ffffff;
+}
+
+.wrapper-body {
+    background-color: #ffffff;
+    padding-top: 15px;
     padding-bottom: 30px;
-    background-color: white;
+    margin-top: 7px;
+}
+
+.wrapper-discover {
+    background-color: #ffffff;
+    padding: 5px 0;
+    margin-top: 30px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--primary-color-hover);
+    border-bottom: 3px solid var(--primary-color-hover);
 }
 
 .list-product {
-    margin: 20px 2% 0px 2%;
+    margin: 0px 2% 0px 2%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
@@ -20,7 +40,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 .slide-wrapper {
     position: relative;
@@ -34,14 +54,14 @@
 .slide-image-right1 {
     position: absolute;
     width: 32.5%;
-    top: 3px;
+    top: 0px;
     right: 0;
     z-index: 10;
 }
 .slide-image-right2 {
     position: absolute;
     width: 32.5%;
-    top: 51.3%;
+    top: 50.7%;
     right: 0;
     z-index: 10;
 }
