--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -36,7 +36,7 @@
         background-color: var(--primary-color);
 
         &:hover {
-            background-color: var(--primary-color-hover) !important;
+            background-color: #014d33 !important;
         }
     }
 
