--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -18,15 +18,37 @@
     margin-top: 7px;
 }
 
+.discover-bg {
+    width: 100%;
+    height: 55px;
+    margin-top: 30px;
+}
+
 .wrapper-discover {
     background-color: #ffffff;
-    padding: 5px 0;
+    padding: 15px 0;
     margin-top: 30px;
     text-align: center;
     font-size: 16px;
     font-weight: 500;
     color: var(--primary-color-hover);
     border-bottom: 3px solid var(--primary-color-hover);
+}
+
+.discover {
+    background-color: #ffffff;
+    padding: 15px 0;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--primary-color-hover);
+    border-bottom: 3px solid var(--primary-color-hover);
+
+    position: fixed;
+    top: 100px;
+    right: 10%;
+    left: 10%;
+    z-index: 11;
 }
 
 .list-product {
