--- a/src/pages/ProductDetailPage/ProductDetailPage.module.scss
+++ b/src/pages/ProductDetailPage/ProductDetailPage.module.scss
@@ -15,14 +15,16 @@
 
 .shop {
     display: flex;
-    margin-top: 20px;
+    margin-top: 30px;
     padding: 20px;
+    border-top: 1px solid #e9e9e9;
 }
 
 .info-shop {
     display: flex;
     align-items: center;
     gap: 16px;
+    margin-right: 25px;
 
     img {
         width: 60px;
@@ -37,22 +39,23 @@
 
 .shop-interact {
     margin-top: 8px;
+
+    button:first-child {
+        &:hover {
+            background-color: var(--primary-color-hover);
+        }
+    }
 }
 
 .interact-content {
     margin-left: 4px;
 }
 
-.devine {
-    height: 100%;
-    border: 1px solid #000;
-    margin: 0px 8px;
-}
-
 .more-info-shop {
     display: flex;
-    flex: 1;
-    justify-content: space-around;
+    padding: 0px 25px;
+    gap: 100px;
+    border-left: 0.5px solid #e9e9e9;
 }
 
 .block {
@@ -77,7 +80,7 @@
 }
 
 .content {
-    color: var(--primary-color);
+    color: var(--primary-color-hover);
     white-space: nowrap;
     text-align: right;
 }
