update/animation-for-shoppage

--- a/src/components/NavBarProfile/NavBarProfile.module.scss
+++ b/src/components/NavBarProfile/NavBarProfile.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
     margin-top: 25px;
+    padding-left: 20px;
 }
 
 .wrapper-user {
@@ -17,7 +18,7 @@
     margin-left: 16px;
 
     h2 {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
