--- a/src/components/Statistical/Statistical.module.scss
+++ b/src/components/Statistical/Statistical.module.scss
@@ -24,18 +24,18 @@
 
 .wrapper-container {
     display: flex;
-    gap: 10px;
+    gap: 150px;
     margin-bottom: 50px;
+    margin-left: 50px;
 }
 
 .wrapper-simple {
-    width: 60%;
-    height: 400px;
-    margin-top: 20px;
+    width: 70%;
+    height: 420px;
+    margin-top: 25px;
 }
 
 .wrapper-pie-chart {
     width: 400px;
     height: 300px;
-    margin-top: 50px;
 }
