--- a/src/pages/SignUpPage/SignUpPage.module.scss
+++ b/src/pages/SignUpPage/SignUpPage.module.scss
@@ -28,6 +28,10 @@
     flex-direction: column;
     align-items: center;
     width: 400px;
+
+    .sign-in {
+        margin-bottom: 15px;
+    }
 }
 
 .form-title {
