--- a/src/components/CardProduct/CardProduct.module.scss
+++ b/src/components/CardProduct/CardProduct.module.scss
@@ -66,6 +66,12 @@
 
 .price {
     font-weight: 500;
+    display: flex;
+    align-items: center;
+
+    & > span {
+        font-size: 1rem;
+    }
 }
 
 .favorite-btn {
